## Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
## 
## See https://csrcs.pbmr.co.za/svn/nea/prototypes/reaktor/conffoam

## ------------------------------------------------------------------------------
##
## Changes are listed by modification time in the descending order,
## i.e. newer changes are listed at the top of the file.
##
## Each record lists the modification date, author and short description of
## the made changes.
##
## ------------------------------------------------------------------------------

2010-04-04 Alexey PETROV <alexey.petrov.nnov@gmail.com>

    * Initial developmen

	