@@ -1,3 +1,4 @@
+dnl VulaSHAKA (Simultaneous Neutronic, Fuel Performance, Heat And Kinetics Analysis)
 dnl Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
 dnl 
 dnl This program is free software: you can redistribute it and/or modify
@@ -13,7 +14,7 @@ dnl
 dnl You should have received a copy of the GNU General Public License
 dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.
 dnl 
-dnl See https://csrcs.pbmr.co.za/svn/nea/prototypes/reaktor/conffoam
+dnl See https://vulashaka.svn.sourceforge.net/svnroot/vulashaka/conffoam
 dnl
 dnl Author : Alexey PETROV
 dnl
